@@ -3,44 +3,50 @@
 #
 # [1670] Design Front Middle Back Queue
 #
-# @lc code=start
-import java.util.ArrayList;
-import java.util.List;
 
+import java.util.LinkedList;
+
+# @lc code=start
 class FrontMiddleBackQueue {
-    private List<Integer> list;
-    
+
+    LinkedList<Integer> list;
+
     public FrontMiddleBackQueue() {
-        list = new ArrayList<>();
+        list = new LinkedList<Integer>();
     }
-    
+
     public void pushFront(int val) {
-        list.add(0, val);
+        list.addFirst(val);
     }
-    
+
     public void pushMiddle(int val) {
-        int mid = list.size() / 2;
-        list.add(mid, val);
+        list.add(list.size() / 2, val);
     }
-    
+
     public void pushBack(int val) {
-        list.add(val);
+        list.addLast(val);
     }
-    
+
     public int popFront() {
-        if (list.isEmpty()) return -1;
-        return list.remove(0);
+        if (list.isEmpty()) {
+            return -1;
+        }
+        return list.removeFirst();
     }
-    
+
     public int popMiddle() {
-        if (list.isEmpty()) return -1;
-        int mid = (list.size() - 1) / 2;
-        return list.remove(mid);
+        if (list.isEmpty()) {
+            return -1;
+        }
+        int sz = list.size();
+        return list.remove((sz - 1) / 2);
     }
-    
+
     public int popBack() {
-        if (list.isEmpty()) return -1;
-        return list.remove(list.size() - 1);
+        if (list.isEmpty()) {
+            return -1;
+        }
+        return list.removeLast();
     }
 }
 
